style.css
body {
  font-family:monserrat, sans-serif;
  background:#E6E5FA;
    color: #000;
    margin: 0;
    padding: 0;
    line-height: 1.6;
    a:link{color:#0E6c9c; text-decoration:none;font-family:monospace,sans-serif;font-weight:normal;}
    a:visited{color:#404576; text-decoration:none underline auto;font-family:monospace,sans-serif;font-weight:normal;}
    a:hover{color:black; text-decoration:underline;font-size:100%;font-weight:bold;}

}
ul{ 
    list-style-type:none;
    margin: 0em;
    padding: 0em;
    list-style-position:outside;
} 
.container {
    max-width: 1000px;
    margin: 0 auto;
  justify-content: space-between;
}

header {
    background-color:#25283d;
    color:#FBFBFF ;
    padding: 1em 0;
    padding-left: 2em;
    a:link{border-radius:5px;
  text-decoration-thickness:50%;
    color:#fff; text-decoration:none;display-decoration:inline-block;padding: 0.5em ;background-color:#453F78;}
    a:visited{border-radius:5px;     color:#fff; text-decoration:none;display-decoration:inline-block;padding: 0.5em ;}
    a:hover{color:#fff;text-shadow:#fff;text-radius:30px;font-size:100%;}

}



 .blog-post {
    margin-bottom: 40px;
    overflow: hidden;
  padding-up:10px;
  padding:30px;
  color: #25283D;
   background:#fbfbff; 
  border-color:blue;
    border-radius: 10px;
    box-shadow: 0 0 3px #6e738d;
  ul{
    list-style:disc;
    padding-left:2em;
    }
}
 .blog-post-ex{
    margin-bottom: 40px;
    overflow: hidden;
  padding-up:10px;
  padding:30px;
   background:#fbfbff; 
    border-radius: 10px;
    box-shadow: 0 0 5px #16195;
  ul{
    list-style:disc;
    padding-left:2em;
    }
}
.blog-post:hover{
  transform: translateY(-3px);
      box-shadow: 0 8px 12px #161925;
   
}
nav li {
    display: inline;
    margin-left: 0px;
  padding:5px;
}

section {
    padding: 2em;
}

.section-about {
    padding-left: 2em;
    padding-right: 2em;
}

.section-blog {
    color: #080505;
    padding-left: 2em;
  padding-up:1em
    padding-right: 2em;
}

h2 {
    color:#2c363f;
    border-bottom: 1px solid #0081a7;
    padding-bottom: 5px;
    margin-bottom: 20px;
}


img {
    width: 100%;
    height: auto;
    display: block;
    border-radius: 8px 8px 0 0;
}


h3 {
    margin-top: 0;
  a:link{color:#312D6D;text-decoration:none;font-family:sans-serif;font-weight:bold;}
  a:visited{color:#312D6D;text-decoration:none;font-family:sans-serif;font-weight:bold;}
}
a{
  text-decoration:none;
}
/*----tags---------------------------------------*/
.tag {
    padding: 1em 1em;
    background-color: #995FA3;
    color: #fff;
    border-radius: 15px;
    margin-right: 10px;
  margin-bottom:0px;
    margin-top:10px;
    text-decoration: none;
    cursor: pointer;
}
.tags {
    margin-bottom: 20px;
  font-family:monserrat, sans-serif;
  margin-left: 2em;
  margin-top:2em;
}
.data-tags {
    display: flex;
    justify-content: space-between;
    align-items: center;
  font-family: monserrat,sans-serif;
    margin-top: 2em;
}
.date {
    font-size: 11px;
  padding-bottom:5px;
    font-style: italic;
    font-family:monserrat,sans-serif ;
    margin-left: auto;
}
.tags .tag {
    background-color: #995fa3;
    color: #fff;
    padding: 3px 8px;
    border-radius: 10px;
    margin-right: 5px;
    display: inline-block;
    font-size: 12px;
  font-family:monospace,sans-serif;
}

.blog-type {
    background-color: #995fa3;
    color: #fff;
    padding: 3px 8px;
    border-radius: 10px;
    display: inline-block;
  font-family:monospace, sans-serif;
    font-size: 12px;
}

